--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,9 @@
     </head>
     <body ng-app="app" ng-controller="ProfileController as vm">
         <!--Script-->
+        <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
         <script type="text/javascript" src="scripts/angular.min.js"></script>
+        <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/profile.module.js"></script>
         <script src="scripts/profile.controller.js"></script>
@@ -468,7 +470,7 @@
                         <!--Summary-->
                         <div class="background-section">
                             <div class="valign-wrapper background-section-header edit">
-                                <img src=".\images\header-summary.png" class="valign" />
+                                <img src="images/header-summary.png" class="valign" />
                                 <h3 class="valign">Summary</h3>
                                 <div class="info-logo">
                                     <a href="#summarymodal" class="modal-trigger">
@@ -482,7 +484,7 @@
                         <!--Experience-->
                         <div class="background-section">
                             <div class="valign-wrapper background-section-header edit">
-                                <img src=".\images\header-experience.png" class="valign" />
+                                <img src="images/header-experience.png" class="valign" />
                                 <h3 class="valign">Experience</h3>
                                 <div class="info-logo">
                                     <a href="#addexpmodal" class="modal-trigger">
@@ -519,7 +521,7 @@
                         <!--Skills-->
                         <div class="background-section">
                             <div class="valign-wrapper background-section-header edit">
-                                <img src=".\images\header-skill.png" class="valign" />
+                                <img src="images/header-skill.png" class="valign" />
                                 <h3 class="valign">Skills</h3>
                                 <div class="info-logo">
                                     <a href="#addskillmodal" class="modal-trigger">
@@ -555,7 +557,7 @@
                         <!--Projects-->
                         <div class="background-section">
                             <div class="valign-wrapper background-section-header edit">
-                                <img src=".\images\header-project.png" class="valign" />
+                                <img src="images/header-project.png" class="valign" />
                                 <h3 class="valign">Projects</h3>
                                 <div class="info-logo">
                                     <a href="#addprojectmodal" class="modal-trigger">
@@ -580,7 +582,7 @@
                         <!--Education-->
                         <div class="background-section background-last-section">
                             <div class="valign-wrapper background-section-header edit">
-                                <img src=".\images\header-education.png" class="valign" />
+                                <img src="images/header-education.png" class="valign" />
                                 <h3 class="valign">Education</h3>
                                 <div class="info-logo">
                                     <a href="#addedumodal" class="modal-trigger">
