--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
     </head>
     <body ng-app="app" ng-controller="ProfileController as vm">
         <!--Script-->
-        <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
         <script type="text/javascript" src="scripts/angular.min.js"></script>
+        <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
         <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/profile.module.js"></script>
@@ -270,7 +270,7 @@
         
         <div id="addskillmodal" class="modal modal-fixed-footer">
             <div class="modal-content">
-                <h4>Add Skill Item</h4>
+                <h4>Add Skill</h4>
                 <div class="row update-infor">
                     <form class="col s12">
                         <div class="row">
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="vm.add_skill()">Confirm</a>
+                <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="add_skill()">Confirm</a>
                 <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
             </div>
         </div>
